[metadata]
name = gine
author = Dario Quintero
author_email=darioaquintero@gmail.com
version = attr: gine._version.__version__
description = Interactive netlist visualisation tools compatible with GDSFactory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daquintero/gine
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipywidgets>=7.6.0,<9
    jupyter_packaging~=0.7.9
    jupyterlab~=3.0
    setuptools>=40.8.0
    wheel
python_requires = >=3.7

[project.optional-dependencies]
develop =
    sphinx
    sphinx_autodoc_typehints
    sphinx-pydantic
    sphinx-autoapi
    sphinx-autobuild
    sphinx_rtd_theme
    sphinx-gallery
    nbsphinx
    myst_parser
    pandoc
    flake8